--- a/src/views/frontend/LoginArtesa/src/App.css
+++ b/src/views/frontend/LoginArtesa/src/App.css
@@ -18,7 +18,7 @@
   --gray: #808080;
   --bg-color: #687e8d;
   --input-color: #f6db8e;
-  --button-color: #478090;
+  --button-color: #f6754e;
   --hover-color: #f6db8e;
   --font-size-xs: 0.75rem;
   --font-size-sm: 0.813rem;
@@ -150,7 +150,7 @@ img, video {
   }
 }
 .auth-page, .LoginPage, .RegisterPage, .ResetPasswordPage {
-  background: var(--bg-color);
+  background: var(--primary-color);
   color: var(--white);
   height: 100vh;
   width: 100%;
@@ -166,7 +166,7 @@ img, video {
   display: flex;
   flex-direction: column;
   border-radius: var(--border-radius-lg);
-  background: #ffffff;
+  background: hsl(0, 0%, 91%);
   overflow: auto;
 }
 @media (min-width: 768px) {
@@ -254,7 +254,7 @@ img, video {
   margin-bottom: var(--spacing-md);
 }
 .auth-page__form-header img, .LoginPage .container .formDiv .headerDiv img, .RegisterPage .container .formDiv .headerDiv img, .ResetPasswordPage .container .formDiv .headerDiv img {
-  width: 250px;
+  width: 100px;
   margin-bottom: var(--spacing-sm);
 }
 .auth-page__form-header h3, .LoginPage .container .formDiv .headerDiv h3, .RegisterPage .container .formDiv .headerDiv h3, .ResetPasswordPage .container .formDiv .headerDiv h3 {
